--- a/all-prompt/package.json
+++ b/all-prompt/package.json
@@ -4,7 +4,9 @@
     "deploy": "wrangler deploy --minify src/index.ts"
   },
   "dependencies": {
-    "hono": "^4.2.9"
+    "@anthropic-ai/sdk": "^0.20.8",
+    "hono": "^4.2.9",
+    "uuidv7": "^0.6.3"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240403.0",
